
[metadata]

name = preoccupied.koji-typing
version = 1.35.0
description = typing annotations for koji

author = Christopher O'Brien
# O'Brien breaks so many tools

author_email = obriencj@preoccupied.net

copyright_years = 2024

license = GNU General Public License v3 (GPLv3)
license_files =
  LICENSE

long_description = file: README.md
long_description_content_type = text/markdown

home_page = https://github.com/obriencj/koji-typing

platform = any

project_urls =
  Source = https://github.com/obriencj/koji-typing
  Issues = https://github.com/obriencj/koji-typing/issues

classifiers =
  Development Status :: 4 - Beta
  Environment :: Console
  Intended Audience :: Developers
  License :: OSI Approved :: GNU General Public License v3 (GPLv3)
  Natural Language :: English
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
  Programming Language :: Python :: 3.11
  Topic :: Software Development :: Build Tools
  Topic :: Utilities


[options]

packages =
  koji-stubs
  koji_cli-stubs
  koji_types

zip_safe = False

install_requires =
  koji
  types-python-dateutil [koji-deps]
  types-requests [koji-deps]
  types-six [koji-deps]


[options.package_data]

* =
  *.pyi
  py.typed


[tox:tox]

envlist = flake8,mypy
skip_missing_interpreters = True


[testenv]

download = True
sitepackages = False


[testenv:mypy]

basepython = python3.9

commands =
  python -B -m mypy.stubtest koji koji_cli \
    --mypy-config-file setup.cfg \
    --allowlist allowlist \
    --allowlist futurelist

deps =
  koji
  mypy
  preoccupied.proxytype


[testenv:koji-git]

basepython = python3.9

commands =
  python -B -m mypy.stubtest koji koji_cli \
    --mypy-config-file setup.cfg \
    --ignore-unused-allowlist \
    --allowlist allowlist

deps =
  git+https://pagure.io/koji.git@master
  mypy
  preoccupied.proxytype


[testenv:build]

basepython = python3.9

commands =
  python -B -m build -n .

deps =
  build


[testenv:flake8]

basepython = python3.9

commands =
  python -B -m flake8 koji-stubs/ koji_cli-stubs/ koji_types/

deps =
  flake8
  flake8-pyi

skip_install = True


[testenv:twine]

basepython = python3.9

commands =
  python -B -m build -n .
  python -B -m twine check dist/*.whl

deps =
  build
  twine

skip_install = True


[flake8]

# E303 complains about more than one blank lines between methods in a class
# E731 assigning a lambda to a variable
# E741 ambiguous variable name
# F401 ambiguous variable name
# F812 list comprehension redefines variable (I reuse tmp names)
# W504 line break after binary operator
# Y*** various flake8 stub opinions
ignore =
  E303,E731,E741
  F401,F812
  W504
  Y001,Y011,Y022,Y023,Y036,Y037,Y041

filename =
  *.py
  *.pyi

exclude =
  __pycache__
  .*
  build
  dist
  docs
  gh-pages
  htmlcov
  setup.py
  tests
  todo
  tools


[mypy]

follow_imports = skip
follow_imports_for_stubs = False
ignore_missing_imports = True
# no_site_packages = True
strict_optional = False

plugins =
  preoccupied.proxytype


[gh-actions]

python =
  3.7: py37
  3.8: py38
  3.9: py39
  3.10: py310
  3.11: py311


# The end.
